--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,14 @@
   --principal-font: 'Roboto', sans-serif;
   --purple: #555A88;
   --medium-purple: #636891;
+  --light-gray: #d3d3d3;
 }
 
 body {
   margin: 0;
+  background-color: white;
+  color: #0F0F2D;
+
 }
 
 html {
@@ -25,4 +29,8 @@ ul {
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+h1, h2, h3, h4, h5 {
+  margin: 0;
 }
