--- a/src/components/styles/ModalForm.css
+++ b/src/components/styles/ModalForm.css
@@ -11,6 +11,7 @@
 
 .activeForm {
   display: grid;
+  
 }
 
 .modalForm__form {
@@ -22,6 +23,19 @@
   flex-direction: column;
   gap: 20px;
   border-radius: 4px;
+  animation: show-modal 1s ease 0s 1 normal forwards;
+}
+
+@keyframes show-modal {
+	0% {
+		opacity: 0;
+		transform: translateY(-250px);
+	}
+
+	100% {
+		opacity: 1;
+		transform: translateY(0);
+	}
 }
 
 .modalForm__title {
