--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -26,6 +26,9 @@
 }
 
 .navbar__btn {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
   background-color: var(--purple);
   color: white;
   border: none;
@@ -33,6 +36,10 @@
   border-radius: 5px;
   cursor: pointer;
   transition: background 200ms ease;
+}
+
+.navbar__btn-icon {
+  font-size: 24px;
 }
 
 .navbar__btn:hover {
