--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -1,8 +1,5 @@
 .navbar {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 15px;
+  padding: 15px 40px 0;
   gap: 10px;
   display: grid;
   place-content: center;
@@ -17,6 +14,7 @@
   .navbar{
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
 
   .navbar__title{
@@ -28,11 +26,12 @@
 .navbar__btn {
   display: flex;
   align-items: center;
+  gap: 8px;
   justify-content: space-around;
   background-color: var(--purple);
   color: white;
   border: none;
-  padding: 10px;
+  padding: 10px 15px;
   border-radius: 5px;
   cursor: pointer;
   transition: background 200ms ease;
