--- a/src/components/styles/UserCard.css
+++ b/src/components/styles/UserCard.css
@@ -12,8 +12,9 @@
 
 h3.userCard__fullName{
   display: block;
+  margin: 0 auto;
   font-size: 24px;
-  width: 200px;
+  width: 250px;
   text-align: center;
   white-space: nowrap; 
   overflow: hidden;
